--- a/src/App.scss
+++ b/src/App.scss
@@ -1,28 +1,15 @@
+body {
+  overflow: hidden;
+}
 #root {
   max-width: 1280px;
   margin: 0;
   text-align: center;
-}
-
-.leaflet-container {
-  position: absolute;
-  top: 0;
-  right: 0;
-  height: 100vh;
-  width: 65vw;
+  overflow: hidden;
 }
 
 .app-container {
   height: 100vh;
-
-  .leaflet-popup-content {
-    margin: 0;
-    padding: 0;
-    width: fit-content !important;
-  }
-  .leaflet-popup-content-wrapper {
-    padding: 0;
-  }
 
   .sideBarMenu {
     position: absolute;
@@ -47,6 +34,23 @@
       background-color: #f1f1f1;
       border-bottom: 1px solid #ccc;
     }
+  }
+
+  .leaflet-container {
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    width: 65vw;
+  }
+
+  .leaflet-popup-content {
+    margin: 0;
+    padding: 0;
+    width: fit-content !important;
+  }
+  .leaflet-popup-content-wrapper {
+    padding: 0;
   }
 
   .searchbarContainer {
