--- a/src/styles/list.scss
+++ b/src/styles/list.scss
@@ -7,7 +7,7 @@
   gap: 1em;
   height: fit-content;
   overflow: scroll;
-  scrollbar-width: thin;
+  scrollbar-width: none;
   
   h3 {
     padding: 0.7em 0 ;
