--- a/src/styles/subSideMenu.scss
+++ b/src/styles/subSideMenu.scss
@@ -5,7 +5,6 @@
   align-items: center;
   padding: 0;
   margin: 0;
-  border: #9370db;
   list-style: none;
 
   button {
@@ -17,7 +16,9 @@
     color: #FFF;
     &:hover {
       opacity: 0.9;
+      cursor: pointer;
     }
+    border: none;
   }
   .button-active {
     background-color: darkgreen;
