--- a/src/styles/subSideMenu.scss
+++ b/src/styles/subSideMenu.scss
@@ -8,40 +8,31 @@
   list-style: none;
 
   button {
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.4em;
+    font-size: 1.1rem;
     width: 33%;
     padding: 1em 0;
     border-radius: 0%;
     background-color: #1423DC;
     color: #FFF;
+    border: none;
+
     &:hover {
       opacity: 0.9;
       cursor: pointer;
     }
-    border: none;
+    .iconPost {
+      width: 1em;
+      height: 1em;
+    }
   }
+
   .button-active {
     background-color: darkgreen;
     opacity: 0.95;
   }
 }
 
-.subSideSearch {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  padding: 0;
-  margin: 0;
-  width: 100%;
-
-  h3 {
-    margin: 0;
-    padding: 0;
-    width: 25%;
-    height: 3em;
-    background-color: #f1f1f1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-}
