searchPost work inprogress => css + search functionality

--- a/src/styles/searchPost.scss
+++ b/src/styles/searchPost.scss
@@ -45,16 +45,16 @@
     background-color: #fbfbfb;
     box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
 
-    h3 {
-      margin: 0;
-      padding: 0;
-      width: 25%;
-      height: 3em;
-      // background-color: #f1f1f1;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
+    // h3 {
+    //   margin: 0;
+    //   padding: 0;
+    //   width: 25%;
+    //   height: 3em;
+    //   // background-color: #f1f1f1;
+    //   display: flex;
+    //   justify-content: center;
+    //   align-items: center;
+    // }
   }
 
   .blur {
