Refactor styles and components for improved layout and responsiveness; update SearchPost textField borderRadius

--- a/src/App.scss
+++ b/src/App.scss
@@ -22,6 +22,7 @@ body {
     flex-direction: column;
     justify-content: start;
     align-items: center;
+    gap: 1em;
 
     h2 {
       width: 100%;
