--- a/src/styles/list.scss
+++ b/src/styles/list.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 1em;
   width: 99%;
   gap: 1em;
   height: 81vh; // approximatif height
@@ -10,7 +11,7 @@
     transition: 0.2s;
   }
 
-  .subSideMenu {
+  .listContainerSubMenu {
     display: flex;
     justify-content: space-between;
     width: 100%;
@@ -19,31 +20,31 @@
       font-size: 1.1rem;
       width: 100%;
       height: 3em;
-      background-color: #1423DC;
-      color: white;
       display: flex;
       flex-direction: row;
       justify-content: center;
+      background-color: #f1f2f3;
       gap: 0.4em;
       align-items: center;
       transition: 0.2s;
-
-      &:hover {
-        opacity: 0.9;
-        cursor: pointer;
-      }
       border: none;
       box-shadow: 0 2px 9px rgba(0, 0, 0, 0.4);
-      text-shadow: 0 3px 2px rgba(0, 0, 0, 0.5);
+      text-shadow: 0 3px 2px rgba(0, 0, 0, 0.1);
+
+      &:hover:not(:focus) {
+        background-color: #E9EBEC;
+        cursor: pointer;
+      }
 
       .iconPost {
         width: 1em;
         height: 1em;
       }
     }
+
     .button-active {
-      background-color: darkgreen;
       opacity: 0.95;
+      background-color: #D5EBAD;
     }
   }
 
@@ -69,9 +70,15 @@
 
       &:hover {
         cursor: pointer;
+        opacity: 0.9;
         background-color: rgba(0, 0, 0, 0.1);
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
         ;
+      }
+
+      &:focus {
+        opacity: 0.95;
+        background-color: rgba(0, 0, 0, 0.2);;
       }
 
       p {
