--- a/src/styles/searchPost.scss
+++ b/src/styles/searchPost.scss
@@ -21,11 +21,11 @@
 
 .fade-in-top-normal-delay {
   opacity: 0;
-  animation: fade-in-top-normal 0.8s ease-in 300ms 1 normal forwards;
+  animation: fade-in-top-normal 0.8s ease-in 200ms 1 normal forwards;
 }
 
 .searchPostContainer {
-  width: 97%;
+  width: 95%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -36,29 +36,19 @@
   .subSideSearch {
     width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     padding: 0;
     margin: 0;
-    border-radius: 1.5em;
+    border-radius: 1.2em;
     opacity: 0.3;
     background-color: #fbfbfb;
     box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
 
-    // h3 {
-    //   margin: 0;
-    //   padding: 0;
-    //   width: 25%;
-    //   height: 3em;
-    //   // background-color: #f1f1f1;
-    //   display: flex;
-    //   justify-content: center;
-    //   align-items: center;
-    // }
   }
 
   .blur {
-    filter: blur(0.15em);
+    filter: blur(0.10em);
   }
 
   .searchPostCardContainer {
@@ -66,8 +56,9 @@
     flex-direction: column;
     justify-content: start;
     align-items: start;
-    width: 80%;
+    width: 90%;
     height: 80%;
+    // transition: all 0.2s ease-in;
 
     h3 {
       width: 100%;
@@ -77,7 +68,7 @@
       background-color: #1423dc;
       border-radius: 1em 1em 0 0;
       color: white;
-      font-size: small;
+      font-size: medium;
       display: flex;
       justify-content: start;
       align-items: center;
@@ -96,7 +87,7 @@
       align-items: start;
       padding-top: 1em;
       gap: 0.7em;
-      font-size: 0.6em;
+      font-size: 0.8em;
       border-radius: 0 0 1em 1em;
       box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.1);
 
@@ -107,7 +98,6 @@
         justify-content: start;
         align-items: start;
         border-bottom: 1px solid #ccc;
-        max-width: 85%;
 
         h4 {
           margin: 0;
