--- a/src/styles/postCard.scss
+++ b/src/styles/postCard.scss
@@ -27,7 +27,7 @@
     justify-content: start;
     align-items: start;
     width: 10em;
-    height: 4em;
+    min-height: 4em;
 
     h5 {
       margin: 0;
